src/test/deca/syntax/valid/if_then_4.deca
//Description
//    Vérifier le comportement du if/else
//
//Résultats :
//   Ok
//


{while(a){if(true){} else if(false){;}}}
