src/test/deca/syntax/invalid/if_test7.deca
//Description
//    Vérifier le if
//
//Résultats :
//    Erreur Syntaxique ligne 9
//


if(protected int a){} else({});
